--- a/modflow_ipynbook/modflow最终功能实现-2D转化-溯源-add河流-chd插值-正确.ipynb
+++ b/modflow_ipynbook/modflow最终功能实现-2D转化-溯源-add河流-chd插值-正确.ipynb
@@ -4460,7 +4460,7 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "Python 3.9.2 64-bit",
+      "display_name": "Python 3.7.10 ('coastsat')",
       "language": "python",
       "name": "python3"
     },
@@ -4474,11 +4474,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.2"
+      "version": "3.7.10"
     },
     "vscode": {
       "interpreter": {
-        "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+        "hash": "76267a94c2ed9b0bce05c0e0e9c1be4cf7704d817bca3381125deb99571f63f4"
       }
     }
   },
